force-app/main/default/objects/CRMG_WF__Workflow_Action__c/CRMG_WF__Workflow_Action__c.object-meta.xml
<CustomObject>
    <label>Workflow-Action</label>
    <nameField>
        <displayFormat>WFA-{0000000}</displayFormat>
        <label>WFA#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow-Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>