force-app/main/default/objects/CRMG_WF__Workflow_Action__c/fields/CRMG_WF__Action__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Action__c</fullName>
    <label>Action</label>
    <referenceTo>CRMG_WF__Action__c</referenceTo>
    <relationshipLabel>Workflow-Action</relationshipLabel>
    <relationshipName>Workflow_Action</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>