force-app/main/default/objects/CRMG_WF__Workflow_Action__c/fields/CRMG_WF__noOfRecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__noOfRecordsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>