force-app/main/default/objects/CRMG_WF__Workflow_Action__c/fields/CRMG_WF__Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Time_Trigger__c</fullName>
    <label>Time Trigger</label>
    <referenceTo>CRMG_WF__Time_Trigger__c</referenceTo>
    <relationshipLabel>Workflow-Action</relationshipLabel>
    <relationshipName>Workflow_Action</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>