force-app/main/default/objects/CRMG_WF__Workflow_Action__c/fields/CRMG_WF__Trigger__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Trigger__c</fullName>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>immediate</fullName>
            </value>
            <value>
                <fullName>time dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>