force-app/main/default/objects/CRMG_WF__Workflow_Action__c/fields/CRMG_WF__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique_Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>